# QuadTree

./: CMakeLists.txt  README.md  main.cpp
include/: Kwadrat.h  MyRectangleShape.h  QuadTree.h
src/: CMakeLists.txt  Kwadrat.cpp  MyRectangleShape.cpp  QuadTree.cpp  scansources.cmake  sources.cmake
